--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "body-parser": "^1.12.2",
+    "bower-requirejs": "^1.2.0",
     "express": "~4.10.1",
     "mongoose": "~3.8.8",
     "yelp": "^0.2.0"
